Fix T100017: OBJ: new importer does not import vertices that aren't part of any face

The Python based importer had a special case handling of "no faces in
the whole file at all", where it ended up treating the whole file
as essentially a point-cloud-like object (just loose vertices, no
faces or edges). The new importer code was missing this special case.

Fixes T100017. Added gtest coverage that was failing without the fix.

# Conflicts:
#	source/blender/io/wavefront_obj/importer/obj_import_file_reader.cc