source/blender/io/wavefront_obj/importer/obj_import_file_reader.cc
@@ -13,6 +13,8 @@
 
 #include "obj_import_file_reader.hh"
 
+#include <algorithm>
+
 namespace blender::io::obj {
 
 using std::string;
@@ -322,6 +324,23 @@ static bool parse_keyword(StringRef &line, StringRef keyword)
   return true;
 }
 
+/* Special case: if there were no faces/edges in any geometries,
+ * treat all the vertices as a point cloud. */
+static void use_all_vertices_if_no_faces(Geometry *geom,
+                                         const Vector<std::unique_ptr<Geometry>> &all_geometries,
+                                         const GlobalVertices &global_vertices)
+{
+  if (!global_vertices.vertices.is_empty() && geom && geom->geom_type_ == GEOM_MESH) {
+    if (std::all_of(
+            all_geometries.begin(), all_geometries.end(), [](const std::unique_ptr<Geometry> &g) {
+              return g->get_vertex_count() == 0;
+            })) {
+      geom->track_vertex_index(0);
+      geom->track_vertex_index(global_vertices.vertices.size() - 1);
+    }
+  }
+}
+
 void OBJParser::parse(Vector<std::unique_ptr<Geometry>> &r_all_geometries,
                       GlobalVertices &r_global_vertices)
 {
@@ -493,6 +512,7 @@ void OBJParser::parse(Vector<std::unique_ptr<Geometry>> &r_all_geometries,
     buffer_offset = left_size;
   }
 
+  use_all_vertices_if_no_faces(curr_geom, r_all_geometries, r_global_vertices);
   add_default_mtl_library();
 }
 
